# cimple

./: .gitignore  README.md  pyproject.toml
src/cimple/: __init__.py  _build.py  conversion.py
tests/: test_conversion.py
