[project]
name = "cimple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hwelch-fle", email = "91618355+hwelch-fle@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
cimple = "cimple:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
