[project]
name = "cimple"
version = "0.1.0"
description = "Autogeneration script for cimple.cim"
readme = "README.md"
authors = [
    { name = "hwelch-fle", email = "91618355+hwelch-fle@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
cimple = "cimple:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
quote-style = "single"
